// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LineChartCard /> > renders chart with expected data 1`] = `
[
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "setTransform",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "0",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "1",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
]
`;

exports[`<LineChartCard /> > renders chart with expected data 2`] = `
[
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "setTransform",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "0",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "1",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
]
`;

exports[`<LineChartCard /> > renders chart with expected data 3`] = `
[
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "setTransform",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "0",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "1",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "2016-04",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
]
`;

exports[`<LineChartCard /> > renders chart with expected data 4`] = `
[
  {
    "props": {
      "a": 1,
      "b": 0,
      "c": 0,
      "d": 1,
      "e": 0,
      "f": 0,
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "setTransform",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "0",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "1",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
  {
    "props": {
      "text": "2016-04",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "measureText",
  },
  {
    "props": {
      "value": "12px \\"Helvetica Neue\\", 'Helvetica', 'Arial', sans-serif",
    },
    "transform": [
      1,
      0,
      0,
      1,
      0,
      0,
    ],
    "type": "font",
  },
]
`;
